# ib-web-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/data/: credentials.template.json
src/ib/: __init__.py
src/ib/webapi/: constants.py  exceptions.py  models.py  session.py
src/ib/webapi/endpoints/: account.py  contract.py  order_monitoring.py  portfolio.py
src/tests/: test_contract.py  test_order_monitoring.py  test_portfolio.py
