[project]
name = "ib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "pycryptodome>=3.21.0",
    "pre-commit>=4.0.1",
    "mypy>=1.11.2",
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "flake8>=7.1.1",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"
